force-app/main/default/objects/NEO_Operator__c/NEO_Operator__c.object-meta.xml
<CustomObject>
    <description>For rule engine</description>
    <label>NEO Operator</label>
    <nameField>
        <label>NEO Operator Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>