force-app/main/default/objects/NEO_Operator__c/fields/NEO_Math_Operator_Used__c.field-meta.xml
<CustomField>
    <fullName>NEO_Math_Operator_Used__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Math Operator Used</label>
    <type>Checkbox</type>
</CustomField>