force-app/main/default/objects/NEO_Operator__c/fields/Operator_Format__c.field-meta.xml
<CustomField>
    <fullName>Operator_Format__c</fullName>
    <label>Operator Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>