force-app/main/default/objects/NEO_Operator__c/fields/Operator_Label__c.field-meta.xml
<CustomField>
    <fullName>Operator_Label__c</fullName>
    <label>Operator Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>