force-app/main/default/objects/NEO_Operator__c/fields/Parameter_Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Parameter_Data_Type__c</fullName>
    <label>Parameter Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>List</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Query</fullName>
            </value>
            <value>
                <fullName>Special Value</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>